# CipherSchools_Project

./: License.md  app.py  lottie_animations.py  pyproject.toml  readme.md  requirements.txt  streamlit_app.py
.streamlit/: config.toml  secrets.toml
assets/: custom_styles.css  lottie_animations.py
templates/: report_template.html
utils/: __init__.py  analysis_engine.py  file_analyzer.py  pdf_generator.py  report_generator.py  report_generator_simple.py  threat_scorer.py  virustotal.py  virustotal_api.py
