[project]
name = "malwareshield"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "python-magic>=0.4.27",
    "reportlab>=4.2.5",
    "requests>=2.32.3",
    "streamlit>=1.40.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []